--- a/style.css
+++ b/style.css
@@ -1,54 +1,107 @@
+
 *{ 
     margin: 0;
+    padding: 0;
+    box-sizing: 0;
 }
 :root{ 
-    --orange:hsl(36, 100%, 50%);
-    --paragraph: hsl(257, 6%, 50%);
-    --line: hsl(210, 19%, 94%);
+    font-size: 62.5%;
 }
-span, footer a { 
-    color: orange;
-}
-body{ 
+
+main{ 
+    max-width:33.0rem ;
+    margin: auto;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-    min-width:100vh;
+    padding-top: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
 }
-.all{ 
-    width: 592px;
-    margin: auto ;
-}
-.all h1 { 
-    margin-top: 72px;
-    margin-bottom: 32px;
+main h1 { 
     font-family: 'Inter', sans-serif;
-    font-size: 49px;
-    line-height: 56px;
+    font-weight: 400;
+    font-size: 3.5rem;
+    margin-top:5rem ;
+    margin-bottom:2rem;
 }
-.all p{ 
-color: var(--paragraph);
-font-size: 14px;
-line-height: 28px;
-margin-bottom: 72px;
+main span:nth-child(1){ 
+    color: #FF9900;
+    font-weight: bold;
 }
-.line{ 
-border: 1px solid var(--line);
-width: 568px;
-margin: auto;
-margin-bottom: 8px;
+main span{ 
+    color:#FF9900 ;
+}
+main p{ 
+    font-size: 1.5rem;
+    color: #7D7987;
+    margin-bottom:5rem ;
+
+    line-height: 2.8rem;
+    
 }
 ul { 
     display: flex;
     list-style: none;
+    gap:10rem ;
+    align-items: center;
     justify-content: center;
-    gap: 25px;
+    font-size: 1.5rem;    
 }
 ul a{ 
     text-decoration: none;
-    font-size: 14px;
+    color:#FFA434 ;
 }
-.balls{ 
-   position: fixed;
-    bottom: 0px;
-    right:0px
+
+.line{ 
+    border: 1px solid #ECEFF2;
+    width: 40.0rem;
+    margin-bottom: 1rem;
+}
+
+#balls{ 
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+@media(min-width:40rem){ 
+
+    main img{ 
+        width: 120%
+    }
+
+    main h1{ 
+        font-size: 3.9rem;
+    }
+
+    main p{ 
+        font-size:1.4rem ;
+    }
+    .line{ 
+        border: 1px solid #ECEFF2;
+        width: 50.0rem;
+        margin-bottom: 1rem;
+    }
+}
+
+@media(min-width:1024px){ 
+    main{ 
+        max-width: 592px;
+    }
+    main img{ 
+        width: 70%;
+    }
+    main h1{ 
+        font-size: 4.9rem;
+        width: 56.2rem;
+    }
+    main p{ 
+        margin-bottom: 7.2rem;
+    }
+    .line{ 
+        border: 1px solid #ECEFF2;
+        width: 56.8rem;
+        margin-bottom: 1rem;
+    }
 }
